# noui-platform

./: .env.example  .gitignore  .golangci.yml  .lintstagedrc.json  .prettierignore  BUILD_HISTORY.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json  settings.json  starter-prompt-next-session.md
.husky/: pre-commit
connector/: CLAUDE.md  Dockerfile  go.mod  (+1 more)
migration-intelligence/: .dockerignore  Dockerfile  pyproject.toml  service.py
migration-intelligence/corpus/: __init__.py  abstractor.py  anonymizer.py  store.py
migration-intelligence/reconciliation/: __init__.py  analysis.py  corrections.py
migration-intelligence/scorer/: signal.py
migration-intelligence/tests/: test_analysis.py  test_anonymizer.py  test_corpus.py  test_scorer.py  test_service.py
migration-simulation/: pyproject.toml
migration-simulation/fixtures/: reconciliation_fixtures.yaml
migration-simulation/formula/: benefit.py
migration-simulation/sources/: README.md
migration-simulation/sources/pas/: generate_pas_scenarios.py  pas_load_from_csv.sql  pas_reconciliation_scorecard.sql  pas_scenarios.json  pas_simulation_source_model.sql
migration-simulation/sources/pas/init/: 01_schema.sql
migration-simulation/sources/prism/: prism_data_generator.py  prism_legacy_schema.sql
migration-simulation/sources/prism/init/: 01_schema.sql
migration-simulation/tests/: test_cross_language.py  test_phase2_e2e.py
tools/compose-sim/: README.md  pyproject.toml  requirements.txt  run_test_harness.sh
tools/compose-sim/compose_sim/: __init__.py  cli.py  composer.py  config.py  evaluator.py  learner.py  reporter.py  scenarios.py  schemas.py
tools/compose-sim/compose_sim/prompts/: few_shot_bank.py  prompt_versions.py  system_prompt.py
(+1726 files in other folders)
