[project]
name = "migration-intelligence"
version = "0.1.0"
description = "Migration Intelligence Service - signal scoring, corpus management, mismatch analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "numpy>=1.26.0",
    "rapidfuzz>=3.6.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["scorer*", "corpus*", "reconciliation*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
